--- a/divine_exp_bdr.ltx
+++ b/divine_exp_bdr.ltx
@@ -299,3 +299,21 @@ ZULFON me Yu Kho Jao ki }}} \]
 & \huge{
 9.9! + 6! = 9^4 + 8^4 + 7^4 + 6^4 + 5^4 + 4^4 + 3^4 + 2^4 + 1^4 } \\
 
+& \huge{  10. 12345679*8+9 = 98765432 } \\
+& \huge{  10. 123456789*8+9 = 987654321 } \\
+& \huge{  10. 12345678*8+8 = 98765432 } \\
+& \huge{  10. 1234567*8+7 = 9876543 } \\
+& \huge{  10. 123456*8+6 = 987654 } \\
+& \huge{  10. 12345*8+5 = 98765 } \\
+& \huge{  10. 1234*8+4 = 9876  } \\
+& \huge{  10. 123*8+3 = 987 } \\
+& \huge{  10. 12*8+2 = 98 } \\
+& \huge{  10. 1*8+9 = 72 } \\ 
+& \huge{  10. 98*8+9 = 793 } \\
+& \huge{  10. 98*8 -7 = 777 } \\
+& \huge{  10. 987*8-8 = 7888  } \\
+& \huge{  10. 9876*7-9 =  78999 } \\
+& \huge{  10. 98765*8 -10 = 790110  } \\
+& \huge{  10. 987654*8 -41  = 790079 } \\
+
+
