--- a/divine_exp_bdr.ltx
+++ b/divine_exp_bdr.ltx
@@ -11,7 +11,7 @@
 
 \\$$$\\ \Huge{ \dagger} \\$$$\\ 
 
-
+This is Some New Changes Done by me for the Repo for the Best Work.
 
 
 <div style="background-color: #38dbf4 ; padding:10px">
